# amd

./: .gitignore  README.md  fix_colab_metadata.py  pyproject.toml  requirements.txt  setup_colab.ipynb
data/: aerolineas.xlsx  movies2.xlsx  output.xlsx  recursos_humanos.xlsx  ubermty.xlsx
extras/: 26_Evaluacion_modelos_clasificacion.ipynb  27_Regresion_logistica.ipynb  28_Arboles_decision.ipynb  29_Random_Forest.ipynb  30_Analisis_discriminante.ipynb  31_SVM.ipynb  32_Prueba_Dickey-Fuller.ipynb  33_Suavizacion_exp_triple.ipynb  34_Prophet.ipynb  35_ARIMA.ipynb
notebooks/: 01_Introduccion_python.ipynb  02_Introduccion_markdown.ipynb  03_Comprender_datos.ipynb  03_Organizar_datos.ipynb  03b_Organizar_datos.ipynb  04_Preparar_datos.ipynb  05_Medidas_numericas.ipynb  06_Visualizar_datos.ipynb  07_Pruebas_normalidad.ipynb  08_Tablas_cruzadas_y_correlaciones.ipynb  09_Prueba_chi_cuadrada.ipynb  10_Pruebas_de_correlacion.ipynb  11_Analisis_de_correspondencias.ipynb  12_Escalamiento_multidimensional.ipynb  13_Comparacion_de_grupos.ipynb  14_ANOVA.ipynb  17_RLM.ipynb  18_RLM_modelos.ipynb  20_RLM_interaccion.ipynb  21_RLM_transformacion.ipynb  23_Cluster_analysis.ipynb  24_Analisis_factorial.ipynb  25_Analisis_de_afinidad.ipynb  50_Integrar_datos.ipynb
practicas/: Practica_1.ipynb  Practica_1a.ipynb  Practica_1b.ipynb  Practica_1c.ipynb  Practica_2.ipynb  Practica_2b.ipynb  Practica_3.ipynb  Practica_4.ipynb  Practica_5.ipynb  Practica_6.ipynb  Practica_7.ipynb
