[project]
name = "amd"
version = "0.1.0"
description = "Análisis y minería de datos - Repositorio con notebooks y scripts para aprender análisis de datos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "category_encoders>=2.6.0",
    "openpyxl>=3.1.0",
    "yfinance>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "ipykernel>=7.0.1",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

